--- a/src/assets/Styles/sass/layouts/_header.scss
+++ b/src/assets/Styles/sass/layouts/_header.scss
@@ -1,7 +1,10 @@
 header {
+  width: 100%;
   nav {
     width: 95%;
-    margin: 0 auto;
+    margin: 10px auto;
+    padding: 0 20px;
+    max-width: 1440px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -15,7 +18,35 @@ header {
       }
     }
   }
-}
-.logo {
-  width: 150px;
+
+  .logo {
+    width: 100px;
+  }
+
+  .menu_items_container {
+    font-weight: 700;
+    ul li {
+      margin: 0 20px;
+      a {
+        display: block;
+        font-size: 12px;
+
+        &.active::after {
+          content: "";
+          display: block;
+          width: 100%;
+          height: 2px;
+          background: #ff6060;
+        }
+      }
+    }
+  }
+  @media (min-width: 768px) {
+    .logo {
+      width: 150px;
+    }
+    .menu_items_container ul li a {
+      font-size: 24px;
+    }
+  }
 }
