--- a/src/assets/Styles/sass/main.scss
+++ b/src/assets/Styles/sass/main.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap");
+
 @import "base/_reset";
 @import "utils/_variables";
 @import "utils/mixins";
