added some path corrections

--- a/src/assets/Styles/sass/components/_banner.scss
+++ b/src/assets/Styles/sass/components/_banner.scss
@@ -4,7 +4,7 @@
   width: 100%;
   min-width: 335px;
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)),
-    url(../../../Images/bg1.png);
+    url(../../../images/bg1.png);
   background-size: cover;
   background-position-y: center;
   border-radius: 20px;
