--- a/src/assets/Styles/sass/pages/_about.scss
+++ b/src/assets/Styles/sass/pages/_about.scss
@@ -12,7 +12,7 @@
       min-width: 335px;
       max-width: 1440px;
       background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)),
-        url(../../../Images/bg2.png);
+        url(../../../images/bg2.png);
       background-size: cover;
       background-position-y: center;
       border-radius: 20px;
