--- a/src/assets/Styles/sass/components/_details.scss
+++ b/src/assets/Styles/sass/components/_details.scss
@@ -24,7 +24,7 @@
     & span {
       width: 100%;
       display: flex;
-      justify-content: end;
+      justify-content: flex-end;
       & div svg {
         width: 24px;
         height: 24px;
