--- a/src/assets/Styles/sass/components/_thumb.scss
+++ b/src/assets/Styles/sass/components/_thumb.scss
@@ -16,7 +16,7 @@
     height: 100%;
     position: absolute;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     & .title-container {
       color: #ffffff;
       padding: 20px;
