--- a/src/assets/Styles/sass/pages/_home.scss
+++ b/src/assets/Styles/sass/pages/_home.scss
@@ -1,6 +1,6 @@
 .home {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   padding: 0 20px;
