--- a/src/assets/Styles/sass/pages/_logement.scss
+++ b/src/assets/Styles/sass/pages/_logement.scss
@@ -1,6 +1,6 @@
 .logement {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
 
@@ -61,7 +61,7 @@
         }
         .profile {
           display: flex;
-          justify-content: end;
+          justify-content: flex-end;
           align-items: center;
           .name {
             display: flex;
@@ -107,7 +107,7 @@
         .profile-stars {
           display: flex;
           flex-direction: column-reverse;
-          align-items: end;
+          align-items: flex-end;
           height: auto;
           width: 50%;
           .stars {
