--- a/src/assets/Styles/sass/components/_carousel.scss
+++ b/src/assets/Styles/sass/components/_carousel.scss
@@ -48,7 +48,8 @@
     display: flex;
     scroll-behavior: smooth;
     pointer-events: none;
-
+    position: relative;
+      
     div {
       position: relative;
       display: flex;
@@ -72,6 +73,19 @@
       scrollbar-width: none;
     }
   }
+}
+.image-number {
+  top: 0;
+  left: 0;
+  padding: 10px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  font-weight: 900;
 }
 
 @media (min-width: 640px) {
