--- a/src/assets/Styles/sass/layouts/_header.scss
+++ b/src/assets/Styles/sass/layouts/_header.scss
@@ -15,6 +15,10 @@ header {
         margin: 0 0.2rem;
         color: #ff6060;
         font-size: 24px;
+        a{
+          text-transform: uppercase;
+
+        }
       }
     }
   }
@@ -47,6 +51,8 @@ header {
     }
     .menu_items_container ul li a {
       font-size: 24px;
+      text-transform:initial;
+
     }
   }
 }
